aws/rasa/ingress/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $NAME-assistant
  namespace: $NAMESPACE
spec:
  ingressClassName: istio
  tls:
    - hosts:
        - assistant.$DOMAIN
      secretName: $NAME-assistant-tls
  rules:
    - host: assistant.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rasa
                port:
                  number: 5005
